charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ingress
  namespace: coder
  annotations:
    kubernetes.io/ingress.regional-static-ip-name: "coder-static-ip"
    kubernetes.io/ingress.class: "gce-internal"
    networking.gke.io/load-balancer-type: "Internal"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coder
            port:
              number: 80
